festivalid/boothid로 reservation 가져오기